Edit h1 line spacing and fix bug where header background bleeds through border when tbody is empty

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main h1 {
     display: flex;
     align-items: center;
     gap: 1em;
+    letter-spacing: 1px;
 }
 
 main h1 svg {
@@ -90,10 +91,12 @@ thead tr th{
 
 table thead th:first-child {
    border-top-left-radius: var(--corner-radius); 
+   border-bottom-left-radius: var(--corner-radius);
 }
 
 table thead th:last-child {
     border-top-right-radius: var(--corner-radius);
+    border-bottom-right-radius: var(--corner-radius);
 }
 
 table tr:last-child td:first-child {
